--- a/SimpleDistributedPubSub/config.properties
+++ b/SimpleDistributedPubSub/config.properties
@@ -4,3 +4,5 @@ sub         = sub.SubCommandTwo
 unsub       = sub.SubCommandTwo
 acq         = pub.AcquireCommand
 rel         = pub.ReleaseCommand
+Bck_Sub     = sub.BackupSubCommand
+msgSync     = sync.MessageSyncCommand
